# open-claude-code-main

./: .gitattributes  .gitignore  DEVELOPMENT_PLAN.md  DEVIN_PROMPT.md  OCCD_FULL_AUDIT.md  PROJECT_MEMORY.json  PROJECT_PLAN.md  README.md  run-with-ollama.ps1  test-cli.ps1  test-ollama-direct.ps1  test-ollama.ps1  test-sdk.mjs
desktop/: README.md
desktop/frontend/src/: App.tsx  api.ts  styles.css  types.ts
desktop/frontend/src/components/: Chat.tsx  ConfirmCmd.tsx  Execution.tsx  Settings.tsx  TaskPanel.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: ai.rs  controller.rs  fs_ops.rs  lib.rs  main.rs  memory.rs  project_scan.rs  settings.rs  tasks.rs  tools.rs  trace.rs  util.rs  watcher.rs
docs/: USAGE.md
src/services/api/: client.ts
src/utils/: messages.ts
src/utils/model/: model.ts
stubs/@anthropic-ai/ollama-sdk/: v2.js
stubs/react/compiler-runtime/: index.js  package.json
